--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "asyncawait": "^1.0.7",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "firebase": "^5.8.0",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.1.0"
   },
