--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.4",
     "firebase": "^5.8.0",
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "http-errors": "^1.7.1"
   },
   "private": true
 }
